# theme-converter-for-vs

./: .gitignore  README.md
ThemeConverter/ThemeConverter/: Converter.cs
ThemeConverter/ThemeConverter/Properties/: launchSettings.json
ThemeConverterCpp/: CMakeLists.txt
ThemeConverterCpp/ThemeConverter/: CMakeLists.txt
ThemeConverterCpp/ThemeConverter/src/: main.cpp
ThemeConverterCpp/ThemeConverterCppLib/: CMakeLists.txt
ThemeConverterCpp/ThemeConverterCppLib/include/: ColorUtils.h  InvalidInputFileError.h  ThemeConverter.h
ThemeConverterCpp/ThemeConverterCppLib/include/VS/: OverlayMapping.h  VSTokens.h
ThemeConverterCpp/ThemeConverterCppLib/include/VSCode/: Theme.h  TokenFallback.h  TokenMapping.h
ThemeConverterCpp/ThemeConverterCppLib/src/: ColorUtils.cpp  InvalidInputFileError.cpp  ThemeConverter.cpp
ThemeConverterCpp/ThemeConverterCppLib/src/VSCode/: Theme.cpp
